--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3333
 TLS_CERT=./certs/cert.pem
 TLS_KEY=./certs/key.pem
-SYNC_TOKEN=your-secret-token-here
+SYNC_TOKEN=testtest
 DATABASE_URL=postgres://user:password@localhost:5432/timekiosk
